moved all buttons' style stuff to app.xaml added error message

--- a/CodePanel/App.xaml
+++ b/CodePanel/App.xaml
@@ -6,6 +6,35 @@
     <Application.Resources>
         <Color x:Key="MainAppColor">#FF00D1FF</Color>
         <SolidColorBrush x:Key="MainAppBrush" Color="{StaticResource MainAppColor}"></SolidColorBrush>
+        <SolidColorBrush x:Key="MessageForegroundBrush" Color="WhiteSmoke"></SolidColorBrush>
+        
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"></BooleanToVisibilityConverter>
+
+        <!--Buttons style -->
+        <Storyboard x:Key="ButtonMouseDownStoryBoard">
+            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="FeedbackRectangle" To="1" Duration="0:0:0.1"/>
+            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="FeedbackRectangle" To="0" Duration="0:0:0.4"/>
+        </Storyboard>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Grid Margin="5">
+                            <Rectangle Margin="1" x:Name="FeedbackRectangle" RadiusX="10" RadiusY="10" Fill="{TemplateBinding BorderBrush}" Opacity="0"/>
+                            <Rectangle RadiusX="10" RadiusY="10" Stroke="{TemplateBinding BorderBrush}" Fill="{TemplateBinding Background}" StrokeThickness="5"/>
+                            <TextBlock Text="{TemplateBinding Button.Content}" FontWeight="Bold" FontSize="32" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{TemplateBinding Foreground}"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <EventTrigger RoutedEvent="PreviewMouseDown">
+                                <BeginStoryboard Storyboard="{StaticResource ButtonMouseDownStoryBoard}"></BeginStoryboard>
+                            </EventTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"></Setter>
+            <Setter Property="Foreground" Value="{StaticResource MainAppBrush}"></Setter>
+            <Setter Property="BorderBrush" Value="{Binding ElementName=KeyPadControl, Path=BorderBrush}"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
