--- a/CodePanel/MainWindow.xaml
+++ b/CodePanel/MainWindow.xaml
@@ -5,19 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CodePanel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1280" Closing="MainWindow_OnClosing" PreviewMouseDown="MainWindow_OnPreviewMouseDown">
+        Title="MainWindow" Height="600" Width="1024" Closing="MainWindow_OnClosing" PreviewMouseDown="MainWindow_OnPreviewMouseDown">
     <Grid>
         <Grid x:Name="BluringGrid">
-            <Grid.Effect>
-                <BlurEffect x:Name="BlurEffect"  Radius="0" KernelType="Gaussian"></BlurEffect>
-            </Grid.Effect>
-            <Grid VerticalAlignment="Bottom"  HorizontalAlignment="Center">
+            <Grid VerticalAlignment="Bottom"  HorizontalAlignment="Center" Margin="0,0,0,10">
                 <StackPanel Orientation="Vertical">
                     <local:PasswordBox Margin="10" Password="{Binding Password, ElementName=KeyPad}" BorderBrush="{StaticResource MainAppBrush}" Foreground="{StaticResource MainAppBrush}"/>
-                    <local:KeyPad x:Name="KeyPad" Width="250" Height="300" BorderBrush="{StaticResource MainAppBrush}" Foreground="{StaticResource MainAppBrush}" OKButtonVisible="False" ButtonFeedbackBrush="{StaticResource MainAppBrush}"/>
+                    <local:KeyPad x:Name="KeyPad" Width="250" Height="300" BorderBrush="{StaticResource MainAppBrush}" Foreground="{StaticResource MainAppBrush}" OKButtonVisible="False"/>
                 </StackPanel>
             </Grid>
         </Grid>
-        <!--<Grid x:Name="ErrorGrid" Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="Red"></Grid>-->
+        <Grid x:Name="ErrorGrid" Background="Transparent" Visibility="Collapsed">
+            <Grid  Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="Red">
+                <TextBlock Text="Неверный пароль" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="48" Foreground="{StaticResource MessageForegroundBrush}"></TextBlock>
+                <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Width="80" Height="80" Content="OK" Foreground="{StaticResource MessageForegroundBrush}" BorderBrush="{StaticResource MessageForegroundBrush}" Click="Button_Click"></Button>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
