--- a/CodePanel/MainWindow.xaml
+++ b/CodePanel/MainWindow.xaml
@@ -8,6 +8,11 @@
         Title="MainWindow" Height="600" Width="1024" Closing="MainWindow_OnClosing" PreviewMouseDown="MainWindow_OnPreviewMouseDown">
     <Grid>
         <Grid x:Name="BluringGrid">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0">
+                <Button Height="110" Width="210" Content="Взлом камеры" Background="{StaticResource ActionButtonTextBrush}" BorderBrush="DarkSlateGray" Foreground="DarkSlateGray"></Button>
+                <Button Height="110" Width="210" Content="Взлом андроида" Background="LightGoldenrodYellow"></Button>
+                <Button Height="110" Width="210" Content="Хранилище" Background="LightGoldenrodYellow"></Button>
+            </StackPanel>
             <Grid VerticalAlignment="Bottom"  HorizontalAlignment="Center" Margin="0,0,0,10">
                 <StackPanel Orientation="Vertical">
                     <local:PasswordBox Margin="10" Password="{Binding Password, ElementName=KeyPad}" BorderBrush="{StaticResource MainAppBrush}" Foreground="{StaticResource MainAppBrush}"/>
@@ -18,7 +23,7 @@
         <Grid x:Name="ErrorGrid" Background="Transparent" Visibility="Collapsed">
             <Grid  Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="Red">
                 <TextBlock Text="Неверный пароль" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="48" Foreground="{StaticResource MessageForegroundBrush}"></TextBlock>
-                <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Width="80" Height="80" Content="OK" Foreground="{StaticResource MessageForegroundBrush}" BorderBrush="{StaticResource MessageForegroundBrush}" Click="Button_Click"></Button>
+                <Button x:Name="CloseErrorGridButton" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Width="80" Height="80" Content="OK" Foreground="{StaticResource MessageForegroundBrush}" BorderBrush="{StaticResource MessageForegroundBrush}" Click="Button_Click"/>
             </Grid>
         </Grid>
     </Grid>
