--- a/CodePanel/MainWindow.xaml
+++ b/CodePanel/MainWindow.xaml
@@ -6,12 +6,20 @@
         xmlns:local="clr-namespace:CodePanel"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1024" Closing="MainWindow_OnClosing" PreviewMouseDown="MainWindow_OnPreviewMouseDown">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ProgressBarStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid x:Name="BluringGrid" Background="Transparent">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Button.Click="ActionButton_OnClick">
-                <Button Tag="Camera" Height="110" Width="210" Content="Взлом камеры" Background="{StaticResource ActionButtonTextBrush}" BorderBrush="DarkSlateGray" Foreground="DarkSlateGray"></Button>
-                <Button Tag="Android" Height="110" Width="210" Content="Взлом андроида" Background="LightGoldenrodYellow"></Button>
-                <Button Tag="Vault" Height="110" Width="210" Content="Хранилище" Background="LightGoldenrodYellow"></Button>
+            <StackPanel x:Name="ActionButtonPanel" IsEnabled="{Binding ElementName=KeyPad, Path=Password, Converter={StaticResource StringLengthCheckConverter}, UpdateSourceTrigger=PropertyChanged}"
+                        Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" Button.Click="ActionButton_OnClick">
+                <Button Tag="Camera" Height="110" Width="210" Content="Взлом камеры"></Button>
+                <Button Tag="Android" Height="110" Width="210" Content="Взлом андроида" ></Button>
+                <Button Tag="Vault" Height="110" Width="210" Content="Хранилище" ></Button>
             </StackPanel>
             <Grid VerticalAlignment="Bottom"  HorizontalAlignment="Center" Margin="0,0,0,10">
                 <StackPanel Orientation="Vertical">
@@ -20,11 +28,15 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <Grid x:Name="ErrorGrid" Background="Transparent" Visibility="Collapsed">
-            <Grid  Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="Red">
-                <TextBlock Text="Неверный пароль" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="48" Foreground="{StaticResource MessageForegroundBrush}"></TextBlock>
-                <Button x:Name="CloseErrorGridButton" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Width="80" Height="80" Content="OK" Foreground="{StaticResource MessageForegroundBrush}" BorderBrush="{StaticResource MessageForegroundBrush}" Click="ErrorClose_OnClick"/>
+        <Grid x:Name="ErrorGrid" Background="Transparent" Visibility="Collapsed" >
+            <Grid  Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="#FFC50000">
+                <TextBlock Text="Неверный пароль"  Style="{StaticResource MessagesText}" Margin="0,50,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="CloseErrorGridButton" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" Width="80" Height="80" Content="OK" Foreground="{StaticResource MessageForegroundBrush}" BorderBrush="{StaticResource MessageForegroundBrush}" Click="ErrorClose_OnClick"/>
             </Grid>
+        </Grid>
+        <Grid x:Name="ProgressGrid"  Margin ="0,150,0,150" VerticalAlignment="Stretch" Background="#FF747474" Visibility="Collapsed">
+            <TextBlock Margin="0,-50,0,0" Text="Подключение через ComSat" Style="{StaticResource MessagesText}"/>
+            <ProgressBar x:Name="ConnectionProgressBar" Margin="0,50,0,0" Width="650" Height="10" Value="0" Background="Transparent" Maximum="{Binding TicksToWait}"/>
         </Grid>
     </Grid>
 </Window>
